<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alopez922hotmail.tallermovil.Taller">

    <TextView
        android:id="@+id/textZapato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Zapatos" />

    <Spinner
        android:id="@+id/spinnerHombreMujer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TipoZapato" />

    <Spinner
        android:id="@+id/spinnerZapato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Marca" />

    <Spinner
        android:id="@+id/spinnerMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cantidad" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Moneda" />

    <Spinner
        android:id="@+id/spinnerMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calcular" />

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
